--- a/src/main/webapp/appoint.html
+++ b/src/main/webapp/appoint.html
@@ -992,7 +992,7 @@
             sRooms1[i]['roomName'] = sRooms1[i]['roomNum']+"";
             sRooms1[i]['roomTypeId'] = roomTypeId;
         }
-        state.totalPrice = _yuyuePrice.toFixed(0);
+        state.totalPrice = Math.round(_yuyuePrice * 100) / 100;
         $("#totalPrice").text(state.totalPrice);
         updateTable();
     }
@@ -1284,9 +1284,9 @@
             var _v = $("#totalPrice").text();
 
             if(_v.indexOf("/")==-1){
-                $("#totalPrice").text(_total.toFixed(2)+"/"+_v);
+                $("#totalPrice").text((Math.round(_total * 100) / 100)+"/"+_v);
             }else{
-                $("#totalPrice").text(_total.toFixed(2)+"/"+_v.split('/')[1]);
+                $("#totalPrice").text((Math.round(_total * 100) / 100)+"/"+_v.split('/')[1]);
             }
         }
     }
